<resources>
    <string name="app_name">ParkStop</string>
    <string name="action_settings">Settings</string>
    <string name="user_location">Use Current Location</string>
    <string name="parking">Parking</string>
    <string name="dog_park">Dog Park</string>
    <string name="playground">Playground</string>
    <string name="restrooms">Restrooms</string>
    <string name="hike_trails">Hiking Trials</string>
    <string name="picnic_area">Jogging</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="results_title">Search Results</string>
    <string name="directions">Get Directions</string>
    <string name="attributes">Attributes</string>
    <string name="zipcode">Zipcode</string>
    <string name="title_activity_results_list_view">ResultsListView</string>

</resources>
