<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchBtn"
        android:layout_alignTop="@+id/resetBtn"
        android:layout_toRightOf="@+id/resetBtn"
        android:layout_toEndOf="@+id/resetBtn"
        android:layout_gravity="center" />

    <TextView
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zipcode"
        android:id="@+id/zipCode"
        android:layout_marginTop="68dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetBtn"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/zipCode"
        android:layout_toEndOf="@+id/zipCode"
        android:layout_marginBottom="36dp"
        android:layout_gravity="right|center_vertical" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picnic_area"
        android:id="@+id/picnicAreaCB"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/parkingCB"
        android:layout_toRightOf="@+id/resetBtn"
        android:layout_toEndOf="@+id/resetBtn" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking"
        android:id="@+id/parkingCB"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/playgroundCB"
        android:layout_alignEnd="@+id/playgroundCB"
        android:layout_alignLeft="@+id/playgroundCB"
        android:layout_alignStart="@+id/playgroundCB" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playground"
        android:id="@+id/playgroundCB"
        android:layout_below="@+id/dogParkCB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_park"
        android:id="@+id/dogParkCB"
        android:layout_below="@+id/parkingCB"
        android:layout_alignLeft="@+id/parkingCB"
        android:layout_alignStart="@+id/parkingCB"
        android:layout_alignRight="@+id/playgroundCB"
        android:layout_alignEnd="@+id/playgroundCB" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hike_trails"
        android:id="@+id/hikeTrailsCB"
        android:layout_gravity="center"
        android:layout_below="@+id/picnicAreaCB"
        android:layout_toRightOf="@+id/resetBtn" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restrooms"
        android:id="@+id/restroomsCB"
        android:layout_gravity="center_horizontal|top"
        android:layout_below="@+id/hikeTrailsCB"
        android:layout_toRightOf="@+id/resetBtn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/zipcodeEdit"
        android:layout_below="@+id/zipCode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Enter Zip Code"/>

    <TextView
        style="@style/CodeFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attributes"
        android:layout_above="@+id/parkingCB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:id="@+id/attributes" />
</RelativeLayout>
